--- a/css/main.css
+++ b/css/main.css
@@ -41,29 +41,33 @@ p {
 	font-size: 0.875em;
     padding: 0 30px;
 }
-
+ul{
+	margin:0;
+}
 /*The widths are in a percentage!*/
 header {
 
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+    text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
+	width:100%;
 }
 
 header h1 {
 	margin: 0;
-	padding: 38px 0;
+	padding: 38px 20px 20px 20px; 
+	width:100%;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-
-	padding: 46px 0;
+	width:100%;
+	padding: 26px 0;
 }
 header nav ul {
 	margin: 0;
@@ -73,8 +77,9 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
-	padding: 0 10px;
-	display:inline-flex;
+	padding: 10px 0;
+	list-style: none;
+
 }
 header nav ul li a{
 	text-decoration: none;
@@ -84,26 +89,17 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
-	align-items: flex-start;
-	flex-flow: wrap;
+	align-items: center;
+	flex-flow: row wrap;
 }
 
-.main-image {
-	height: auto;
-	
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-
-}
 .main-title h2 {
 	text-align: left;
 	padding: 5px 0;
@@ -178,4 +174,57 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: 0.875em;
+}
+
+@media all and (min-width:768px) {
+    /* Tablet styles here */
+	.bottom-section {
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+	
+	
+	}
+	.section-one,
+.section-two,
+.section-three {
+	width: 33%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+	border-top: 1px solid #eee;
+	
+	flex-basis: 30%;
+}
+.section-two{
+	border-bottom: white;
+}
+}
+ 
+@media all and (min-width:1200px) {
+    /* Desktop styles here */
+ 
+
+header nav {
+
+	width: 40%;
+}
+header nav ul {
+	display: flex;
+	justify-content: space-between;
+
+
+}
+header{
+	justify-content: space-between;
+}
+  header h1 {
+	width: 40%;
+	padding: 0;
+	border-bottom: none;
+	text-align: left;
+  }
+
+
 }
